// Code generated by mojo. DO NOT EDIT.

syntax = "proto3";

package mojo.core;

option go_package = "github.com/mojo-lang/core/go/pkg/mojo/core;core";
option java_multiple_files = true;
option java_outer_classname = "BoxedProto";
option java_package = "org.mojolang.mojo.core";

message BoolValue {
    bool val = 1;
}

message Int32Value {
    int32 val = 1;
}

message UInt32Value {
    uint32 val = 1;
}

message Int64Value {
    int64 val = 1;
}

message UInt64Value {
    uint64 val = 1;
}

message Float32Value {
    float val = 1;
}

message Float64Value {
    double val = 1;
}

message StringValue {
    string val = 1;
}

message BytesValue {
    bytes val = 1;
}

message BoolValues {
    repeated bool vals = 1;
}

message Int32Values {
    repeated int32 vals = 1;
}

message UInt32Values {
    repeated uint32 vals = 1;
}

message Int64Values {
    repeated int64 vals = 1;
}

message UInt64Values {
    repeated uint64 vals = 1;
}

message Float32Values {
    repeated float vals = 1;
}

message Float64Values {
    repeated double vals = 1;
}

message StringValues {
    repeated string vals = 1;
}

message StringMap {
    map<string, string> vals = 1;
}

message StringMultiMap {
    map<string, StringValues> vals = 1;
}