// Code generated by mojo. DO NOT EDIT.

syntax = "proto3";

package mojo.core;

import "mojo/core/error.proto";
import "mojo/core/null.proto";

option go_package = "github.com/mojo-lang/core/go/pkg/mojo/core;core";
option java_multiple_files = true;
option java_outer_classname = "StatusProto";
option java_package = "org.mojolang.mojo.core";

message Status {
    oneof status {
        Error error_val = 1;
        Null null_val = 2;
    }
}