// Code generated by mojo. DO NOT EDIT.

syntax = "proto3";

package mojo.document;

import "mojo/core/time.proto";
import "mojo/core/url.proto";
import "mojo/document/attribute.proto";

option go_package = "github.com/mojo-lang/document/go/pkg/mojo/document;document";
option java_multiple_files = true;
option java_outer_classname = "DocumentProto";
option java_package = "org.mojolang.mojo.document";

message Document {
    MetaData meta_data = 1;
    repeated Block blocks = 2;
}

message Block {
    oneof block {
        Plain plain = 1;
        Paragraph paragraph = 2;
        LineBlock line_block = 3;
        CodeBlock code_block = 4;
        QuoteBlock quote_block = 5;
        OrderedList ordered_list = 6;
        BulletList bullet_list = 7;
        DefinitionList definition_list = 8;
        Header header = 9;
        Table table = 10;
        Division division = 11;
    }
}

message Line {
    repeated Inline vals = 1;
}

message Plain {
    repeated Inline inlines = 2;
}

message Paragraph {
    repeated Inline inlines = 2;
}

message LineBlock {
    repeated Line lines = 2;
}

message CodeBlock {
    Attribute attribute = 1;
    string language = 2;
    repeated Line lines = 3;
}

message QuoteBlock {
    repeated Block blocks = 2;
}

message ListAttribute {
    enum NumberStyle {
        NUMBER_STYLE_UNSPECIFIED=0;
        NUMBER_STYLE_EXAMPLE=1;
        NUMBER_STYLE_DECIMAL=2;
        NUMBER_STYLE_LOWER_ROMAN=3;
        NUMBER_STYLE_UPPER_ROMAN=4;
        NUMBER_STYLE_LOWER_ALPHA=5;
        NUMBER_STYLE_UPPER_ALPHA=6;
    }

    enum NumberDelimiter {
        NUMBER_DELIMITER_UNSPECIFIED=0;
        NUMBER_DELIMITER_PERIOD=1;
        NUMBER_DELIMITER_ONE_PARENT=2;
        NUMBER_DELIMITER_TWO_PARENTS=3;
    }

    int64 begin_number = 1;
    NumberStyle number_style = 2;
    NumberDelimiter number_delimiter = 3;
}

message OrderedList {
    message Blocks {
        repeated Block vals = 1;
    }

    ListAttribute attribute = 1;
    repeated Blocks items = 2;
}

message BulletList {
    message Blocks {
        repeated Block vals = 1;
    }

    repeated Blocks items = 2;
}

message DefinitionList {
    message Item {
        repeated Inline term = 1;
        repeated Blocks definitions = 2;
    }

    repeated Item items = 2;
}

message Header {
    Attribute attribute = 1;
    int64 level = 2;
    repeated Inline text = 3;
}

message Table {
    enum Alignment {
        ALIGNMENT_UNSPECIFIED=0;
        ALIGNMENT_LEFT=1;
        ALIGNMENT_RIGHT=2;
        ALIGNMENT_CENTER=3;
    }

    message Cell {
        repeated Block vals = 1;
    }

    message Row {
        repeated Table.Cell vals = 1;
    }

    message Header {
        repeated Table.Cell vals = 1;
    }

    repeated Inline caption = 1;
    Alignment alignment = 2;
    double width = 3;
    Header header = 4;
    repeated Row rows = 5;
}

message Division {
    Attribute attribute = 1;
    repeated Block content = 2;
}

message Blocks {
    repeated Block vals = 1;
}

message Inline {
    oneof inline {
        Text text = 1;
        Emphasized emphasized = 2;
        Strong strong = 3;
        Strikeout strikeout = 4;
        Superscript superscript = 5;
        Subscript subscript = 6;
        SmallCaps small_caps = 7;
        Quoted quoted = 8;
        Cite cite = 9;
        Code code = 10;
        Space space = 11;
        LineBreak line_break = 12;
        Link link = 13;
        Image image = 14;
        Note note = 15;
        Span span = 16;
    }
}

message Text {
    string val = 1;
}

message Emphasized {
    repeated Inline vals = 1;
}

message Strong {
    repeated Inline vals = 1;
}

message Strikeout {
    repeated Inline vals = 1;
}

message Superscript {
    repeated Inline vals = 1;
}

message Subscript {
    repeated Inline vals = 1;
}

message SmallCaps {
    repeated Inline vals = 1;
}

message Space {
}

message LineBreak {
}

message Note {
    repeated Block vals = 1;
}

message Quoted {
    enum Type {
        TYPE_DOUBLE=0;
        TYPE_SINGLE=1;
    }

    Type type = 1;
    repeated Inline text = 2;
}

message Cite {
    repeated Citation citations = 1;
    repeated Inline inlines = 2;
}

message Citation {
    enum Mode {
        MODE_NORMAL=0;
        MODE_AUTHOR_IN_TEXT=1;
        MODE_SUPPRESS_AUTHOR=2;
    }

    string id = 1;
    repeated Inline prefix = 2;
    repeated Inline suffix = 3;
    Mode mode = 4;
    int64 note_count = 5;
    int64 hash = 6;
}

message Code {
    Attribute attribute = 1;
    string content = 2;
}

message Link {
    Attribute attribute = 1;
    repeated Inline description = 2;
    Target target = 3;
}

message Image {
    Attribute attribute = 1;
    repeated Inline description = 2;
    Target target = 3;
}

message Span {
    Attribute attribute = 1;
    repeated Inline inlines = 2;
}

message Target {
    string title = 1;
    mojo.core.Url url = 2;
}

message Inlines {
    repeated Inline vals = 1;
}

message MetaData {
    map<string, MetaValue> vals = 1;
}

message MetaValueObject {
    map<string, MetaValue> vals = 1;
}

message MetaValues {
    repeated MetaValue vals = 1;
}

message MetaValue {
    oneof meta_value {
        MetaValueObject meta_value_object_val = 1;
        MetaValues meta_values_val = 2;
        bool bool_val = 3;
        string string_val = 4;
        mojo.core.DateTime date_time_val = 10;
        Inlines inlines_val = 14;
        Blocks blocks_val = 15;
    }
}